--- a/src/recipes/templates/recipes/search_results.html
+++ b/src/recipes/templates/recipes/search_results.html
@@ -15,6 +15,7 @@
                 <ul>
                     <li><a href="{% url 'recipes:home' %}">Home</a></li>
                     <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
+                    <li><a href="{% url 'recipes:add_recipe' %}">Create</a></li>
                     <li><a href="{%url 'logout' %}">Logout</a></li>
                 </ul>
             </nav>
@@ -36,6 +37,7 @@
                     <option value="" selected disabled>Select difficulty</option>
                     <option value="Easy">Easy</option>
                     <option value="Medium">Medium</option>
+                    <option value="Intermediate">Intermediate</option>
                     <option value="Hard">Hard</option>
                 </select>
             </div>
