--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -326,7 +326,7 @@ form button.login-btn:hover {
 .welcome-content {
   text-align: center;
   padding: 50px 20px;
-  background-color: #f2f2f2;
+  background-color: #fff;
   border-radius: 10px;
   margin: 50px auto;
   max-width: 600px;
@@ -416,6 +416,84 @@ form button.login-btn:hover {
 
 .search-container .search-btn:hover {
   background-color: #0056b3;
+}
+
+/** Add Recipe Page Stylings **/
+
+/* Container for the add recipe form */
+.add-recipe-container {
+  max-width: 800px;
+  margin: 50px auto;
+  padding: 40px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+/* Page title */
+.add-recipe-container h2 {
+  font-family: 'Playfair Display', serif;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: #343a40;
+}
+
+/* Create-Recipe Form styles */
+.add-recipe-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: start;
+}
+
+.add-recipe-form .form-group {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.add-recipe-form input[type="text"],
+.add-recipe-form input[type="number"],
+.add-recipe-form select,
+.add-recipe-form input[type="file"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
+  transition: border-color 0.3s ease;
+  align-items: center;
+}
+
+.add-recipe-form input[type="text"]:focus,
+.add-recipe-form input[type="number"]:focus,
+.add-recipe-form select:focus,
+.add-recipe-form input[type="file"]:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+.add-recipe-form .instructions {
+  display: block;
+  font-size: 0.9rem;
+  color: #6c757d;
+  margin-top: 5px;
+}
+
+/* Submit button */
+.add-recipe-form button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+}
+
+.add-recipe-form button:hover {
+  background-color: #45a049;
 }
 
 
