--- a/recipes/templates/recipes/search_results.html
+++ b/recipes/templates/recipes/search_results.html
@@ -1,89 +1,148 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search Results</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
-<body>
-    <header>
-        <div class="header-container">
-            <h1>Recipify</h1>
-            <div class="hamburger-menu" onclick="toggleMenu()">
-                &#9776; <!-- Hamburger icon -->
-            </div>
-        </div>
-        <nav>
-            <ul class="nav-links">
-                <li><a href="{% url 'recipes:home' %}">Home</a></li>
-                <li><a href="{% url 'recipes:about' %}">About</a></li>
-                <li><a href="{% url 'recipes:recipes_list' %}">Recipes</a></li>
-                <li><a href="{% url 'recipes:add_recipe' %}">Create</a></li>
-                <li><a href="{% url 'logout' %}">Logout</a></li>
-            </ul>
-        </nav>
-    </header>
-    
-    
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+  </head>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar" aria-label="Main Navigation">
+      <h1>Recipify</h1>
+      <div
+        class="hamburger"
+        onclick="toggleNavbar()"
+        aria-label="Toggle Navigation"
+      >
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="navbar-links" aria-label="Navigation Links">
+        <a href="{% url 'recipes:home' %}">Home</a>
+        <a href="{% url 'recipes:about' %}">About</a>
+        <a href="{% url 'recipes:recipes_list' %}">Recipes</a>
+        <a href="{% url 'recipes:add_recipe' %}">Create</a>
+        <a href="{% url 'logout' %}">Logout</a>
+      </div>
+    </nav>
+    <div class="menu-links" id="active" aria-label="Menu Links">
+      <div class="item armed"><a href="{% url 'recipes:home' %}">Home</a></div>
+      <div class="item armed">
+        <a href="{% url 'recipes:about' %}">About</a>
+      </div>
+      <div class="item armed">
+        <a href="{% url 'recipes:recipes_list' %}">Recipes</a>
+      </div>
+      <div class="item armed">
+        <a href="{% url 'recipes:add_recipe' %}">Create</a>
+      </div>
+      <div class="item armed"><a href="{% url 'logout' %}">Logout</a></div>
+    </div>
+
     <div class="search-container">
-        <form method="GET" action="{% url 'recipes:search_results' %}">
-            {% csrf_token %}
-            <div class="form-group">
-                <input type="text" name="query" id="id_query" placeholder="Search recipes..." class="search-input">
-            </div>
-            <div class="form-group">
-                <input type="number" name="cooking_time" id="id_cooking_time" placeholder="Cooking time (minutes)" class="search-input">
-            </div>
-            <div class="form-group">
-                <select name="difficulty" id="id_difficulty" class="search-select">
-                    <option value="" selected disabled>Select difficulty</option>
-                    <option value="Easy">Easy</option>
-                    <option value="Medium">Medium</option>
-                    <option value="Intermediate">Intermediate</option>
-                    <option value="Hard">Hard</option>
-                </select>
-            </div>
-            <button type="submit" class="search-btn">Search</button>
-        </form>
+      <form method="GET" action="{% url 'recipes:search_results' %}">
+        {% csrf_token %}
+        <div class="form-group">
+          <input
+            type="text"
+            name="query"
+            id="id_query"
+            placeholder="Search recipes..."
+            class="search-input"
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="number"
+            name="cooking_time"
+            id="id_cooking_time"
+            placeholder="Cooking time (minutes)"
+            class="search-input"
+          />
+        </div>
+        <div class="form-group">
+          <select name="difficulty" id="id_difficulty" class="search-select">
+            <option value="" selected disabled>Select difficulty</option>
+            <option value="Easy">Easy</option>
+            <option value="Medium">Medium</option>
+            <option value="Intermediate">Intermediate</option>
+            <option value="Hard">Hard</option>
+          </select>
+        </div>
+        <button type="submit" class="search-btn">Search</button>
+      </form>
     </div>
 
     <main>
-        <div class="content-container">
-            <h1>Search Results</h1>
-            <table class="results-table">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Description</th>
-                        <th>Ingredients</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for recipe in search_results %}
-                    <tr>
-                        <td><a href="{% url 'recipes:recipe_detail' recipe.id %}">{{ recipe.name }}</a></td>
-                        <td>{{ recipe.description }}</td>
-                        <td>{{ recipe.ingredients }}</td>
-                    </tr>
-                    {% empty %}
-                    <tr>
-                        <td colspan="3">No recipes found.</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+      <div class="content-container">
+        <h1>Search Results</h1>
+        <table class="results-table">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Description</th>
+              <th>Ingredients</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for recipe in search_results %}
+            <tr>
+              <td>
+                <a href="{% url 'recipes:recipe_detail' recipe.id %}"
+                  >{{ recipe.name }}</a
+                >
+              </td>
+              <td>{{ recipe.description }}</td>
+              <td>{{ recipe.ingredients }}</td>
+            </tr>
+            {% empty %}
+            <tr>
+              <td colspan="3">No recipes found.</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
 
-            <div class="chart-container">
-                <img src="data:image/png;base64,{{ pie_chart_base64 }}" alt="Pie Chart of Difficulty Levels">
-                <img src="data:image/png;base64,{{ bar_chart_base64 }}" alt="Bar Chart of Most Popular Ingredients">
-            </div>
+        <div class="chart-container">
+          <img
+            src="data:image/png;base64,{{ pie_chart_base64 }}"
+            alt="Pie Chart of Difficulty Levels"
+          />
+          <img
+            src="data:image/png;base64,{{ bar_chart_base64 }}"
+            alt="Bar Chart of Most Popular Ingredients"
+          />
         </div>
+      </div>
     </main>
 
     <footer>
-        <p>Recipify, a Django app.</p>
+      <p>Recipify, a Django app.</p>
     </footer>
-</body>
+
+    <script>
+      function toggleNavbar() {
+        let menuLinks = document.getElementById("active");
+        let links = document.querySelectorAll(".armed"); // Select all elements with class "armed"
+        if (menuLinks.style.display === "flex") {
+          menuLinks.style.animationName = "slideOut"; // Apply reverse animation
+          links.forEach((link) => {
+            link.style.animationName = "fadeOut"; // Apply fadeOut animation to each link
+          });
+          setTimeout(() => {
+            menuLinks.style.display = "none";
+          }, 400); // Adjust timing to match animation duration
+        } else {
+          menuLinks.style.animationName = "slideIn"; // Apply regular animation
+          links.forEach((link) => {
+            link.style.animationName = "fadeIn"; // Apply fadeIn animation to each link
+          });
+          menuLinks.style.display = "flex";
+        }
+      }
+    </script>
+  </body>
 </html>
