--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -142,8 +142,8 @@ main {
   color: #6c757d;
   font-size: 1.2rem;
   line-height: 1.6;
-  margin-bottom: 30px;
-}
+   margin-bottom: 30px;
+} 
 
 /* Featured Recipes */
 .featured-recipes {
@@ -507,50 +507,6 @@ form button.login-btn:hover {
   background-color: #45a049;
 }
 
-/** About Page **/
-.about-me {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  font-family: 'Roboto', sans-serif;
-  line-height: 1.6;
-  border: 2px solid #ddd;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.about-me h2 {
-  text-align: center;
-  margin-bottom: 20px;
-  color: #333;
-}
-
-.about-me section {
-  margin-bottom: 20px;
-}
-
-.about-me h3 {
-  margin-top: 20px;
-  color: #555;
-  border-bottom: 2px solid #eee;
-  padding-bottom: 10px;
-}
-
-.about-me p {
-  margin-bottom: 10px;
-  color: #666;
-}
-
-.about-me a {
-  color: #007BFF;
-  text-decoration: none;
-}
-
-.about-me a:hover {
-  text-decoration: underline;
-}
-
 /* Success Page */
 .content-container {
   max-width: 800px;
@@ -589,42 +545,145 @@ form button.login-btn:hover {
   background-color: #45a049;
 }
 
-.hamburger-menu {
+/* Navbar Styles */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #1F2833;
+}
+
+.navbar-links {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.navbar-links a {
+  margin-left: 20px;
+  color: #FFF;
+  text-decoration: none;
+}
+
+
+/* Hamburger Menu Styles */
+.hamburger {
   display: none;
-  font-size: 30px;
+  flex-direction: column;
   cursor: pointer;
+}
+
+.hamburger div {
+  width: 25px;
+  height: 3px;
+  background-color: #FFF;
+  margin: 3px 0;
+  transition: all 0.3s ease;
+}
+
+.menu-links {
+  display: none;
+  background: #C5C6C7;
+  flex-direction: column;
+  /* margin-left: auto; */
+  position: relative;
+  text-align: center;
+  justify-content: space-evenly;
+  align-items: center;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  animation: slideIn 0.3s forwards ease-in-out;
+}
+
+.menu-links a {
+  text-decoration: none;
+  color: #404040;
+}
+
+.item {
+  height: 3vh;
+  margin-top: 2vh;
+  border-bottom: 2px solid #A0A0A0;
+  padding-bottom: 1.25vh;
+  animation: fadeIn 0.3s forwards ease-in-out;
+}
+
+.item:last-child {
+  border-bottom: none;
+}
+
+/* Keyframes for sliding animation */
+@keyframes slideIn {
+  from {
+    height: 0;
+  }
+  to {
+    height: 25vh;
+  }
+}
+
+@keyframes slideOut {
+  from {
+    height: 25vh;
+  }
+  to {
+    height: 0;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.menu-links.active {
+  animation: slideOut 0.3s forwards ease-in-out, fadeOut 0.1s forwards ease;
 }
 
 /* Media Query for Mobile Devices */
 @media (max-width: 768px) {
   .header-container {
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between; /* Ensure proper spacing */
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
   }
 
   nav {
     width: 100%;
-    padding: 0; /* Remove unnecessary padding */
+    padding: 0;
   }
   
   nav ul {
-    display: none; /* Hide the nav links */
+    display: none;
     flex-direction: column;
     width: 100%;
-    align-items: center; /* Center the nav items */
+    align-items: center;
   }
   
   nav ul.active {
     display: flex;
     flex-direction: column;
-    margin-top: 0; /* Remove top margin to eliminate unnecessary space */
+    margin-top: 0;
   }
   
   nav ul li {
     margin-right: 0;
     width: 100%;
-    text-align: center; /* Center the text */
+    text-align: center;
     border-bottom: 1px solid #444;
   }
   
@@ -639,9 +698,17 @@ form button.login-btn:hover {
   }
   
   .hamburger-menu {
-    display: block; /* Show the hamburger menu */
+    display: block;
     font-size: 30px;
     cursor: pointer;
+  }
+
+  .navbar-links {
+    display: none;
+  }
+
+  .hamburger {
+    display: flex;
   }
 }
 
