--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -8,11 +8,30 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
   </head>
   <body>
-    <header>
-      <div class="header-container">
-        <h1>Recipify</h1>
+    <!-- Navbar -->
+    <nav class="navbar" aria-label="Main Navigation">
+      <h1>Recipify</h1>
+      <div
+        class="hamburger"
+        onclick="toggleNavbar()"
+        aria-label="Toggle Navigation"
+      >
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
-    </header>
+      <div class="navbar-links" aria-label="Navigation Links">
+        <a href="{% url 'recipes:home' %}">Home</a>
+        <a href="{% url 'recipes:recipes_list' %}">Recipes</a>
+      </div>
+    </nav>
+
+    <div class="menu-links" id="active" aria-label="Menu Links">
+      <div class="item armed"><a href="{% url 'recipes:home' %}">Home</a></div>
+      <div class="item armed">
+        <a href="{% url 'recipes:recipes_list' %}">Recipes</a>
+      </div>
+    </div>
 
     <main>
       <div class="login-container">
@@ -36,6 +55,26 @@
     </footer>
 
     <script>
+      function toggleNavbar() {
+        let menuLinks = document.getElementById("active");
+        let links = document.querySelectorAll(".armed"); // Select all elements with class "armed"
+        if (menuLinks.style.display === "flex") {
+          menuLinks.style.animationName = "slideOut"; // Apply reverse animation
+          links.forEach((link) => {
+            link.style.animationName = "fadeOut"; // Apply fadeOut animation to each link
+          });
+          setTimeout(() => {
+            menuLinks.style.display = "none";
+          }, 400); // Adjust timing to match animation duration
+        } else {
+          menuLinks.style.animationName = "slideIn"; // Apply regular animation
+          links.forEach((link) => {
+            link.style.animationName = "fadeIn"; // Apply fadeIn animation to each link
+          });
+          menuLinks.style.display = "flex";
+        }
+      }
+
       console.log(
         "Hello! From what I've gathered, anything you make post production will be deleted after a time due to Heroku's filing system. That being said, I can't leave my super user credentials here. Please return to my resume and check out the Contact Me section. We can schedule a temporary account for you to use or discuss my place in your project!"
       );
