--- a/templates/auth/success.html
+++ b/templates/auth/success.html
@@ -8,11 +8,30 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-    <header>
-        <div class="header-container">
-            <h1>Recipify</h1>
+    <!-- Navbar -->
+    <nav class="navbar" aria-label="Main Navigation">
+        <h1>Recipify</h1>
+        <div
+          class="hamburger"
+          onclick="toggleNavbar()"
+          aria-label="Toggle Navigation"
+        >
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
-    </header>
+        <div class="navbar-links" aria-label="Navigation Links">
+          <a href="{% url 'recipes:home' %}">Home</a>
+          <a href="{% url 'recipes:recipes_list' %}">Recipes</a>
+        </div>
+      </nav>
+  
+      <div class="menu-links" id="active" aria-label="Menu Links">
+        <div class="item armed"><a href="{% url 'recipes:home' %}">Home</a></div>
+        <div class="item armed">
+          <a href="{% url 'recipes:recipes_list' %}">Recipes</a>
+        </div>
+      </div>
 
     <main>
         <div class="content-container">
@@ -25,5 +44,27 @@
     <footer>
         <p>Recipify, a Django app.</p>
     </footer>
+
+    <script>
+              function toggleNavbar() {
+        let menuLinks = document.getElementById("active");
+        let links = document.querySelectorAll(".armed"); // Select all elements with class "armed"
+        if (menuLinks.style.display === "flex") {
+          menuLinks.style.animationName = "slideOut"; // Apply reverse animation
+          links.forEach((link) => {
+            link.style.animationName = "fadeOut"; // Apply fadeOut animation to each link
+          });
+          setTimeout(() => {
+            menuLinks.style.display = "none";
+          }, 400); // Adjust timing to match animation duration
+        } else {
+          menuLinks.style.animationName = "slideIn"; // Apply regular animation
+          links.forEach((link) => {
+            link.style.animationName = "fadeIn"; // Apply fadeIn animation to each link
+          });
+          menuLinks.style.display = "flex";
+        }
+      }
+    </script>
 </body>
 </html>
